<resources>
    <string name="app_name">TravelJournalApp</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or register</string>
    <string name="btn_login">LOGIN</string>
    <string name="text_back_to_register">Not a member yet? Create your account now!</string>
    <string name="btn_link_to_register">Back to registration</string>
    <string name="btn_link_to_login">Login</string>
    <string name="text_link_to_login">Already registered? Let\'s go to login!</string>
    <string name="btn_sign_out">Logout</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="bio">About you</string>
    <string name="start_text">Wellcome to Travel Journal App! Here you can keep track of your wonderful vacations!</string>
    <string name="start_to_login">Log in to let your adventure begin!</string>
    <string name="text_btn_go_to_login">Go to signup/login</string>
    <string name="text_btn_show_map">Show map</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="text_btn_add_city_to_journal">Add city</string>

    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="btn_submit_changes">Submit</string>
    <string name="Edit">Edit</string>
    <string name="old_username">New username</string>
    <string name="old_bio">New bio</string>
    <string name="btn_cancel">Cancel</string>
    <string name="add_marker">Add Marker</string>
    <string name="add_overlay">Add Overlay</string>
    <string name="add_detail_activity">Add detail activity</string>
    <string name="Share">Share</string>
    <string name="btn_import_picture">Choose new profile picture</string>
    <string name="btn_take_picture">Take new profile picture</string>


    <!--    <string name="default_web_client_id">268174943807–5qdf4itjoidar6p94vp0s6sgnhij2bp5.apps.googleusercontent.com</string>-->
</resources>