<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:id="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="424dp"
            android:layout_height="136dp"
            android:layout_marginTop="30dip"
            app:srcCompat="@drawable/com_facebook_profile_picture_blank_portrait" />

        <EditText
            android:id="@+id/username"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/old_username"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:layout_marginTop="90dip"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black" />

        <!--<EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:minHeight="48dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black" />
-->
        <EditText
            android:id="@+id/bio"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/old_bio"
            android:imeOptions="actionUnspecified"
            android:inputType="text"
            android:maxLines="1"
            android:minHeight="48dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black" />

        <Button
            android:id="@+id/import_profile_picture"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/colorAccent"
            android:text="@string/btn_import_picture"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bio"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="283dp" />

        <Button
            android:id="@+id/take_profile_picture"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/colorAccent"
            android:text="@string/btn_take_picture"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bio"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="283dp" />

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:background="@color/colorAccent"
            android:text="@string/btn_submit_changes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/import_profile"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="283dp" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            android:text="@string/btn_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cancel"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="283dp" />


    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>