<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/btn_add_marker"
            tools:context=".MapsActivity" />
        <Button
            android:id="@+id/btn_add_marker"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_above="@id/bottom_navigation"
            android:text="@string/add_marker"
            android:onClick="addMarkerBtnClicked"
            />
        <Button
            android:id="@+id/add_overlay"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_above="@id/bottom_navigation"
            android:layout_toEndOf="@id/btn_add_marker"
            android:text="@string/add_overlay"
            />
        <Button
            android:id="@+id/add_detail_activity"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_above="@id/bottom_navigation"
            android:layout_toEndOf="@id/add_overlay"
            android:text="@string/add_detail_activity"
            />


        <com.google.android.material.bottomnavigation.BottomNavigationView
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            app:itemBackground="@color/purple_200"
            app:itemIconTint="@drawable/selector"
            app:itemTextColor="@drawable/selector"
            app:menu="@menu/bottom_nav_menu" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
